Commit for adding Username & Password wrong exception process
Commit for adding Username & Password wrong exception process

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <activity android:name="com.jotform.jotformapisample.list.CreateReportActivity" >
         </activity>
+        <activity android:name="com.jotform.jotformapisample.list.RegisterUserActivity" >
+        </activity>
     </application>
 
 </manifest>
