--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -56,6 +56,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.GetAllReportsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
