--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -61,6 +61,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.CreateQuestionActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
