Added API sample for getting user setting
Added API sample for getting user setting

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -65,6 +65,11 @@
             android:name="com.jotform.jotformapisample.list.CreateQuestionActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.UpdateSettingActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
     </application>
 
 </manifest>
