--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -75,6 +75,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.HistoryListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
