Added API Sample for getting form properties
Added API Sample for getting form properties

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -80,6 +80,16 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.GetFormPropertiesActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.CreateFormPropertiesActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
