--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -90,6 +90,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
+        <activity
+            android:name="com.jotform.jotformapisample.list.SubmissionListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
